bk_ida/gccida/g2/immed_real_const
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/immed_real_const/src/varasm.c:2731:12: error: expected expression
*( _OWORD *)&v2.r[1] = *( _OWORD *)&exp->block.subblocks; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/immed_real_const/src/varasm.c:2731:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v2.r[1] = *( _OWORD *)&exp->block.subblocks; 
   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/immed_real_const/src/varasm.c:2731:35: error: expected expression
*( _OWORD *)&v2.r[1] = *( _OWORD *)&exp->block.subblocks; 
                                  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/immed_real_const/src/varasm.c:2731:27: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v2.r[1] = *( _OWORD *)&exp->block.subblocks; 
                          ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/immed_real_const/src/varasm.c:2733:30: error: use of undeclared identifier 'machine_mode'
return immed_real_const_1( ( machine_mode)( BYTE5( exp->common.type->block.abstract_origin) >> 1), v2); 
                             ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/immed_real_const/src/obj/varasm.o] Error 1
